# HackTheBookshelf2024

./: .gitignore  LICENSE  README.md
backend/: .env.example  README.md  config.py  pyproject.toml
backend/backend/: .env.example  settings.py  urls.py
backend/backend/backend/: settings.py
backend/books/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/books/migrations/: 0001_initial.py  0001_squashed_0009_bookdebt__count_dump_alter_bookdebt_count.py  0002_alter_book_certificate_number.py  0003_book_count_bookdebt.py  0004_alter_book_count_alter_bookdebt_date_of_deadline_and_more.py  0005_alter_bookdebt_date_of_deadline_and_more.py  0006_alter_book_count_alter_bookdebt_count.py  0007_alter_bookdebt_options_alter_bookdebt_book_and_more.py  0008_alter_bookdebt_count.py  0009_bookdebt__count_dump_alter_bookdebt_count.py
backend/events/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/events/migrations/: 0001_initial.py  0001_squashed_0007_event_hidden.py  0008_event_attendees.py  0009_alter_event_attendees.py  0010_alter_event_attendees.py  0011_event_send_push.py  0012_alter_event_send_push.py  0013_alter_event_send_push.py  0014_alter_event_send_push.py
backend/jwt_auth/: serializers.py  urls.py  views.py
backend/notifications/: admin.py  models.py  urls.py  views.py
backend/notifications/migrations/: 0001_initial.py  0002_usernotification_created_at.py
backend/reward_system/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/reward_system/migrations/: 0001_initial.py  (+4 more)
(+77 files in other folders)
